# HiggsAgent

./: .env.example  .gitignore  Makefile  README.md  composer.json  pyproject.toml
.github/: CODEOWNERS
config/: guardrails.example.json  write-policy.example.json
docs/: README.md  architecture.md  autonomous-coding-session-contract.md  documentation-policy.md  observability-contract.md  phase-1-dispatcher-mvp.md  phase-2-analytics-metric-model.md  phase-2-analytics-observability.md  phase-3-hybrid-execution.md  phase-4-adaptive-dispatch.md  phase-5-benchmarking-mode.md  phase-6-autonomous-ticket-execution.md  phase-7-turnkey-project-build.md  repository-structure.md  review-handoff-template.md  routing-normalization.md  runtime-tooling.md  safety-model.md  secret-handling.md  storage-boundaries-and-retention.md  testing-strategy.md  ticket-semantics.md  todo.md
schemas/: analytics-aggregate.schema.json  common-defs.schema.json  execution-attempt.schema.json  execution-event.schema.json  higgs-ticket.schema.json
tests/: __init__.py
tickets/: T-000001.md  T-000002.md  T-000003.md  T-000004.md  T-000005.md  T-000006.md  T-000007.md  T-000008.md  T-000009.md  T-000010.md  T-000011.md  T-000012.md  T-000013.md  T-000014.md  T-000015.md  T-000016.md  T-000017.md  T-000018.md  T-000019.md  T-000020.md  T-000021.md  T-000022.md  T-000023.md  T-000024.md  T-000025.md  T-000026.md  T-000027.md  T-000028.md  T-000029.md  T-000030.md  T-000031.md  T-000032.md  T-000033.md  T-000034.md  T-000035.md  T-000036.md  T-000037.md  T-000038.md  T-000039.md  T-000040.md  (+35 more)
(+219 files in other folders)
